# aibranch

./: LICENSE  README.md  package.json  wrangler.jsonc
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
src/: index.ts
src/workflows/: branch-name-generator.ts
