[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.48"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
